objects/HR_Employee__c.object
<CustomObject><fields>
        <fullName>HR_Birthdate__c</fullName>
        <defaultValue>DATE(1978,11,12)</defaultValue>
        <label>Birthdate</label>
        <type>Date</type>
    </fields><fields>
        <fullName>HR_Cost_Center__c</fullName>
        <label>Cost Center</label>
        <picklist>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Engineering</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>HR_Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Facilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>HR_Desk_Phone__c</fullName>
        <defaultValue>'415-555-1111'</defaultValue>
        <label>Desk Phone</label>
        <type>Phone</type>
    </fields><fields>
        <fullName>HR_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>HR_Employee_ID__c</fullName>
        <externalId>true</externalId>
        <label>Employee ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>HR_Employee_Type__c</fullName>
        <label>Employee Type</label>
        <picklist>
            <picklistValues>
                <fullName>Employee</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part-time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remote Employee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>HR_Manager__c</fullName>
        <label>Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>HR_Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields><fields>
        <fullName>HR_Onboarding_Mentor__c</fullName>
        <label>Onboarding Mentor</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>HR_Position__c</fullName>
        <label>Position</label>
        <referenceTo>HR_Job_Requisition__c</referenceTo>
        <relationshipLabel>Hired Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>HR_Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>HR_Title__c</fullName>
        <defaultValue>'Sales Rep'</defaultValue>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>true</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Employee</label><nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Employees</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>HR_Employee_ID__c</columns>
        <columns>HR_Title__c</columns>
        <columns>HR_Department__c</columns>
        <columns>HR_Email__c</columns>
        <columns>HR_Mobile_Phone__c</columns>
        <columns>HR_Employee_Type__c</columns>
        <columns>HR_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Employees</label>
    </listViews></CustomObject>